# alpha_studio

./: .dockerignore  .env.example  .gitignore  LICENSE.md  README.md  design-qa.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
admin-web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
admin-web/src/: main.test.tsx  main.tsx  styles.css
backend/: Cargo.toml  Dockerfile
backend/src/: app.rs  billing.rs  config.rs  db.rs  error.rs  gateway.rs  lib.rs  license.rs  main.rs  routes.rs  state.rs  tokens.rs
backend/tests/: billing.rs  gateway.rs  license.rs  routes.rs  tokens.rs
deploy/caddy/: Caddyfile
deploy/postgres/init/: README.md
docs/: incuboot-deck.html  incuboot-product-development-plan.md
migrations/: 0001_initial.sql  0002_admin_gateway_authorization.sql  0003_provider_catalog_and_authorization_plaintext.sql  0004_provider_endpoint_corrections.sql  0005_minimax_endpoint_domain.sql  0006_fractional_model_route_pricing.sql  0007_yuan_billing_units.sql  0008_deepseek_chat_completions_endpoint.sql  0009_deepseek_endpoint_fallback_correction.sql
public/docs/: api-usage.html
src/: App.test.tsx  App.tsx  codexBridge.ts  codexEvents.test.ts  codexEvents.ts  coworkers.ts  domain.ts  gitBranch.test.tsx  gitBranch.ts  license.test.ts  license.ts  main.tsx  models.ts  prompt.test.ts  prompt.ts  store.test.ts  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/test/: setup.ts
