[package]
name = "alpha-studio"
version = "0.1.0"
description = "Alpha Studio - noncommercial local coding workspace"
authors = ["Alpha Studio"]
edition = "2021"

[lib]
name = "alpha_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
base64 = "0.22"

[target."cfg(target_os = \"macos\")".dependencies]
window-vibrancy = "0.7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
