[package]
name = "alpha-studio"
version = "0.1.0"
description = "Incuboot - private vertical commercial brand intelligence workspace"
authors = ["Incuboot"]
edition = "2021"
default-run = "alpha-studio"

[lib]
name = "alpha_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
imap = "2.4.1"
keyring = "4.0.1"
keyring-core = "1.0.0"
mail-parser = "0.11.3"
native-tls = "0.2.18"
rusqlite = { version = "0.32.1", features = ["bundled"] }

[target."cfg(target_os = \"macos\")".dependencies]
window-vibrancy = "0.7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
